# AlloClass

./: .env.exemple  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: analytics.py  backoffice.py  chat.py  classifications.py  classify.py  configs.py  conversations.py  evaluate.py  feedbacks.py  imports.py  learned_rules.py
backend/app/core/: config.py  database.py  dependencies.py  llm.py  openai_client.py
backend/app/models/: __init__.py  axis.py  axis_category.py  base.py  chat_message.py  classification_result.py  config.py  conversation.py  evaluation_result.py  learned_rule.py  prompt_version.py  user_feedback.py
backend/app/presets/: support-client.yaml
backend/app/presets/scenarios/: cas-limites.yaml  journee-normale.yaml  panne-livraison.yaml  retours-soldes.yaml  vip-mecontent.yaml
backend/app/prompts/: blind_generator.py  challenger.py  classifier.py  error_patterns.py  exam_builder.py  feedback_parser.py  ground_truth.py  ticket_query.py
backend/app/schemas/: analytics.py  backoffice.py  chat.py  classification.py  config.py  feedback.py  llm_outputs.py
backend/app/services/: blind_ticket_generator.py  classification_pipeline.py  config_management.py  csv_import.py  error_pattern_detector.py  feedback_learning.py  learning_explainer.py  ticket_query.py  vector_search.py
backend/app/services/agent/: __init__.py  agent.py  history.py  system_prompt.py  (+3 more)
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_tables.py  002_add_conversations.py
(+59 files in other folders)
